@@ -1893,6 +1893,23 @@ test wm-transient-7.5 {Reassign transient, destroy transient} -body {
     deleteWindows
 }
 
+test wm-transient-8.1 {transient to withdrawn window, Bug 1163496} -setup {
+    deleteWindows
+    set result {}
+} -body {
+    # Verifies that transients stay on top of their masters, even if they were
+    # made transients when those masters were withdrawn.
+    toplevel .t1; wm withdraw  .t1;     update
+    toplevel .t2; wm transient .t2 .t1; update
+    lappend result [winfo ismapped .t1] [winfo ismapped .t2]
+    wm deiconify .t1; update
+    lappend result [winfo ismapped .t1] [winfo ismapped .t2]
+    raise .t1; update
+    lappend result [lsearch -all -inline -glob [wm stackorder .] ".t?"]
+} -cleanup {
+    deleteWindows
+} -result {0 0 1 1 {.t1 .t2}}
+
 
 ### wm state ###
 test wm-state-1.1 {usage} -returnCodes error -body {
